Refactor build configuration and dependencies
- Extract dependency versions to gradle.properties for consistency
- Update Gradle wrapper to 8.12.1
- Configure test execution order for proper dependency resolution
- Reduce Redisson retry attempts from MAX_VALUE to 20
- Replace Guava ImmutableList with Java List.of()
- Add test forking for coordination leadership tests
- Enable debug logging for Redis clients in tests

Co-authored by Claude